<resources>
    <string name="app_name">UnionApp</string>

    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>

    <string name="name">Name</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="pwd">Password</string>
    <string name="pwd1">Confirm Password</string>
    <string name="reg">Register</string>
    <string name="reg1">Register?</string>
    <string name="to_login">Already have an account?</string>


    <!--
        Draw item labels
    -->
    <string name="social">Social</string>
    <string name="drawer_item_1">Shop</string>
    <string name="drawer_item_2">Events</string>
    <string name="drawer_item_3">Societies</string>


    <string name="zones">Union Zones</string>
    <string name="union">Your Union</string>
    <string name="drawer_item_zone_1">Voice</string>
    <string name="drawer_item_zone_2">Activity</string>
    <string name="drawer_item_zone_3">Support</string>
    <string name="drawer_item_zone_4">Community</string>
    <string name="sign_out">Sign Out</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="add">+</string>


    <string name="your_union_content">
        My name is Saskia and I am the President of the Students\' Union here at Surrey. As a Union we are here to represent your views as students and make sure your voice is heard, whether that be academic issues, accommodation, facilities – everything related to your experience here.



I started at Surrey in 2012 as an Undergraduate studying Dance and Culture BA (Hons), I then succesfully ran in the Surrey Decides elections in my final year to become VP Community, and again, earlier this year to become your 2017-18 Union President.



        My advice to all students at Surrey is to get involved with as much as you can: join that club or society, run to be a committee member, go on that trip, become a Course Rep or Community Rep, volunteer to be a Freshers Angel, get a part-time job, run in the student election. It\'s these opportunities that will enhance your time here, allow you to improve your skills and also inevitably increase your employability for when you leave. It\'s also through these activities that you will meet friends for life - trust me!

There are 5 full-time Sabbatical officers (a.k.a. Sabbs) elected each year and my team is made up of VP Support Jess Wreford, VP Voice Alex Harden, VP Activity Ali Douglass, and VP Community Helena Mason. As your Sabbs we feel passionately that all Surrey students should have the best university experience possible, and so each day we attend meetings and committees, we organise events and campaigns, we facilitate the running of sports clubs and societies – to make sure that the best experience is what you get. When you have a problem with the University that you can't resolve yourself, we are here to support you and help fight your corner.

Our offices are located in the SU building, below Rubix, please don't hesi​tate to come and see us if you ever have an issue - or just to say "Hi!".

You can also email me on ussu.president@surrey.ac.uk.

I hope you have a fantastic year here at Surrey, and I'm excited to be a part of it.​
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="example_email">aa00000@surrey.ac.uk</string>



    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>

    <string name="voice_text_1"> ​The Community Zone is led by the elected Vice-President Community and is responsible for bringing the student community together, integrating the student community into the local community, and ensuring that there are volunteering opportunities available for all students. This involves taking a lead on the entertainment &amp; social activities on campus, welcoming new students and creating opportunities for students to participate in the local community.​</string>
    <string name="voice_text_2">The Zone Committee are part-time volunteers who work on Community Zone projects. Students should contact the VP Community or the Community Zone if they have any ideas or feedback about the entertainment that the Students\' Union provides; if they want to find out about volunteering and fundraisi​ng opportunities. They are all working on their own projects too so feel free to contact them.</string>

    <string name="support_text_1">Hiya! I\'m Jess Wreford, t​​he current Vice President Support for 2017/18. So what is my role? WELL, I hold the responsibility for managing the Support Zone! The Support Zone is designed to work alongside, publicise and provide different support services in order to improve the quality of life while studying at Surrey. Whe​​th​er the issue regards; accommodation, finance, race, religion, wellbeing, etc. The Support Zone is here to provide a helping hand an​​d represent you as a student, not a statistic. Please feel free to come to us for advice and information about any aspect of student life or to find out more about the support services we have to offer.​ </string>
    <string name="support_text_2">The Committee work part-time to support everything the Support Zone is working on, whether its campaigns, workshops or training sessions. They eac​​h have their own projects they are working on this year so feel free to chat to them about all that is happening t​his year.</string>

    <string name="community_text_1">"My name is Helena and I am your VP Community for 2017-18. My role as a Vice-President is to represent all students and lead the Community Zone, which is made up of 5 part time officers. As a zone we focus on bringing students together and building a sense of community both within campus and within Guildford. We are responsible for all of the social and community activities that take place at Surrey, including entertainment, welcoming students, volunteering and fundraising as well as showcase events such as Colours Ball and Student and Societies Awards Ball. A key responsibility of the Community Zone is also to communicate the contribution of students to the local community and to deal with accommodation issues alongside the VP Support."</string>
    <string name="community_text_2">The Zone Committee are part-time volunteers who work on Community Zone projects. Students should contact the VP Community or the Community Zone if they have any ideas or feedback about the entertainment that the Students\' Union provides; if they want to find out about volunteering and fundraisi​ng opportunities. They are all working on their own projects too so feel free to contact them.</string>

    <string name="activity_text_1">I’m Ali, your VP Activity for 2017-18. It’s my job to lead the Activity Zone in removing barriers to student involvement, facilitating personal development for students and helping you have fun! During the year, the Activity Zone deliver a number of campaigns to help promote student involvement with Activities, as well as help organise events such as Varsity, Colours Ball and Student &amp; Society Awards.​ The Activity Zone is here to help students get involved in as many things as possible! Check out what sports clubs and societies are on offer at the bottom of this page.</string>
    <string name="activity_text_2">The Activity Zone is led by the elected Vice-President Activity and is responsible for developing new student activities, increasing participation, and ensuring that any student wanting to take part in student activities can do so without any barriers. This involves campaigning for individual development through involvement in sports clubs &amp; societies, taking a lead on promoting our Duke of Edinburgh Award programme, and running activities that students can get involved in.​​​</string>


</resources>
