<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item android:title="@string/social"
        android:checkable="false">
        <menu>

            <item android:id="@+id/home"
                android:title="@string/home"
                android:icon="@drawable/ic_home_black_24dp"
                android:orderInCategory="1">

            </item>

            <item android:id="@+id/profile"
                android:title="@string/profile"
                android:icon="@drawable/user"
                android:orderInCategory="2">

            </item>



            <item android:id="@+id/shop"
                android:title="@string/drawer_item_1"
                android:icon="@drawable/ic_shop_black_24dp"
                android:orderInCategory="3">

            </item>

            <item android:id="@+id/events"
                android:title="@string/drawer_item_2"
                android:icon="@drawable/ic_event_black_24dp"
                android:orderInCategory="4">
            </item>

            <item android:id="@+id/societies"
                android:title="@string/drawer_item_3"
                android:icon="@drawable/ic_school_black_24dp"
                android:orderInCategory="5">
            </item>
        </menu>
    </item>



    <item android:title="@string/zones"
        android:checkable="false">
        <menu>

            <item
                android:id="@+id/your_union"
                android:title="@string/union"
                android:icon="@drawable/ic_stag"
                android:orderInCategory="0">
            </item>

            <item
                android:id="@+id/voice"
                android:title="@string/drawer_item_zone_1"
                android:icon="@drawable/ic_record_voice_over_black_24dp"
                android:orderInCategory="0">
            </item>

            <item android:id="@+id/activity"
                android:title="@string/drawer_item_zone_2"
                android:icon="@drawable/ic_directions_run_black_24dp"
                android:orderInCategory="1">>

            </item>

            <item android:id="@+id/support"
                android:title="@string/drawer_item_zone_3"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:orderInCategory="2">>

            </item>

            <item android:id="@+id/community"
                android:title="@string/drawer_item_zone_4"
                android:icon="@drawable/ic_people_black_24dp"
                android:orderInCategory="3">>

            </item>

        </menu>

    </item>

    <item android:id="@+id/signout"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:orderInCategory="4">>

    </item>

</menu>



